# fair-topk

./: CMakeLists.txt  README.md
container/: fair_topk_container.def  fair_topk_container.dockerfile
include/: bsp_tree.h  data_loader.h  data_preprocessor.h  experiments.h  memory.h  tourney_tree.h  utility.h
include/sdlp/: sdlp.hpp
include/xenium/: kirsch_kfifo_queue.hpp
src/: baseline.cpp  baseline_2d.cpp  data_loader.cpp  data_preprocessor.cpp  experiments.cpp  klevel_based_method.cpp  klevel_based_method_2d.cpp  mip_based_method.cpp  preprocess_data.cpp  utility.cpp
